codegen/ui_tests/export_fn_raw_return.stderr
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-13fbbdaa684db49e.rmeta'
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-1b00becb051b9b4f.rmeta'
error[E0599]: the method `map` exists for type `bool`, but its trait bounds were not satisfied
  --> ui_tests/export_fn_raw_return.rs:10:33
   |
10 | pub fn test_fn(input: Point) -> bool {
   |                                 ^^^^ method cannot be called on `bool` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `bool: std::iter::Iterator`
           which is required by `&mut bool: std::iter::Iterator`
